<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.oneplus.mydaygram.InputPasswordPage">

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:background="@null"
        android:cursorVisible="false"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:textColor="@color/transparent" />

    <LinearLayout
        android:id="@+id/password_circles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="140dp"
        android:orientation="horizontal">

        <View
            android:id="@+id/password_circle1"
            android:layout_width="13dp"
            android:layout_height="13dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/password_uninput_circle" />

        <View
            android:id="@+id/password_circle2"
            android:layout_width="13dp"
            android:layout_height="13dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/password_uninput_circle" />

        <View
            android:id="@+id/password_circle3"
            android:layout_width="13dp"
            android:layout_height="13dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/password_uninput_circle" />

        <View
            android:id="@+id/password_circle4"
            android:layout_width="13dp"
            android:layout_height="13dp"
            android:background="@drawable/password_uninput_circle" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/wrong_password_alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_circles"
        android:layout_centerHorizontal="true">

        <View
            android:layout_width="3dp"
            android:layout_height="16dp"
            android:background="@color/colorRed"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="45dp"
            android:layout_marginRight="45dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/wrong_password"
            android:textColor="@color/colorRed"
            android:textSize="20sp"
            android:typeface="sans" />

        <View
            android:layout_width="3dp"
            android:layout_height="16dp"
            android:background="@color/colorRed"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="45dp"
            android:layout_marginLeft="45dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/new_password_alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_circles"
        android:layout_centerHorizontal="true">

        <View
            android:layout_width="3dp"
            android:layout_height="16dp"
            android:background="@color/passwordInput"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/new_password"
            android:textColor="@color/passwordInput"
            android:textSize="20sp"
            android:typeface="sans" />

        <View
            android:layout_width="3dp"
            android:layout_height="16dp"
            android:background="@color/passwordInput"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/new_password_again_alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_circles"
        android:layout_centerHorizontal="true">

        <View
            android:layout_width="3dp"
            android:layout_height="16dp"
            android:background="@color/passwordInput"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/new_password_again"
            android:textColor="@color/passwordInput"
            android:textSize="20sp"
            android:typeface="sans" />

        <View
            android:layout_width="3dp"
            android:layout_height="16dp"
            android:background="@color/passwordInput"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/old_password_alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_circles"
        android:layout_centerHorizontal="true">

        <View
            android:layout_width="3dp"
            android:layout_height="16dp"
            android:background="@color/passwordInput"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/old_password"
            android:textColor="@color/passwordInput"
            android:textSize="20sp"
            android:typeface="sans" />

        <View
            android:layout_width="3dp"
            android:layout_height="16dp"
            android:background="@color/passwordInput"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"/>

    </LinearLayout>

</RelativeLayout>
